			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05b: *********************************

IMP: (10/18/06, DN) Added class topology.Topology to manage graph of nodes and arcs.
    Classes Geometry and RTNode are moved to database.topology package.

IMP: (10/17/06, DN) ImmutableArcInst can compute its bounds without real ArcInst.

IMP: (10/17/06, GVG) Refactoring spicenetlist so some classes can be reused in DSPF reader.

IMP/MAN: (10/17/06, GVG) Import of Cadence colors moved to WindowMenu -> Colors. Action is in a job now.

IMP/MAN: (10/17/06, SMR) Added Cell expansion controls to Network / Node Extraction Preferences.

BUG: (10/17/06, DN) Zero-length arcs with angles 0 and 90 generates Polys with swapped head and tail extension.
FIX: In Poly.makeEndPointPoly use "angle == 0" and "angle == 900" conditions.
     In debug menu "Dima|Find error-prone arcs" command show such arcs in all loaded libraries.

BUG: (10/16/06, DN) API allows to create negated layout arcs.
FIX:  Negated arc end is always connected to PrimitivePort which "isNegatable". 

BUG: (10/16/06, DN) Delete subcells, then undo. Their expansion status is lost.
FIX: Keep info about expanded nodes on a Cell. 

IMP: (10/16/06, GVG) Skeleton to read DSPF

IMP: (10/16/06, DN) Connectivity index was moved to immutable CellBackup.
    Now database has less memory size, because it doesn't keep Connection.
    However, "ArcInst.getConnection", "NodeInst.getConnections", "PortInst.getConnections"
    are slower, because they allocate temporary Connections.

BUG: (10/12/06, SMR) Wiring a port to itself crashes (Bug #1242).
FIX: In Router.createRouteNoJob(), make sure route.getStart() is valid.

IMP: (10/11/06, GVG) More min contact primitives for node extraction.

IMP: (10/11/06, DN) "CellBackup" has index of exports sorted by original node.
    It will be used in Geometry calculations in immuable data base.