@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05b: *********************************
 
+BUG: (10/20/96, GVG) Exception in TechPalette if Mosis is chosen and you select min or aligned primitives (TSMC180)
+FIX: More checking for unused elements.
+
 IMP: (10/18/06, DN) Added class topology.Topology to manage graph of nodes and arcs.
     Classes Geometry and RTNode are moved to database.topology package.
 
